--- a/Carro-generico-backend/src/main/resources/application.properties
+++ b/Carro-generico-backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+spring.datasource.url=jdbc:h2:~/test;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 
+spring.jpa.show-sql = true
+
+logging.level.com.baeldung.testloglevel=DEBUG
+logging.level.org.springframework.web: DEBUG
+logging.level.com.tutorial.crud.service: DEBUG
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
